refine intro: mission, de, stamp

--- a/01_SCRE_DE_Textbook.ipynb
+++ b/01_SCRE_DE_Textbook.ipynb
@@ -21,11 +21,30 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## DoD Digital Engineering Strategy\n",
+        "\n",
+        "Digital Engineering, as defined by [USD(R&E)](https://ac.cto.mil/digital_engineering/), is an integrated digital approach using authoritative sources of system data and models as a continuum thoroughout the development and life of a system. Digital Engineering updates traditional systems engineering practices to take advantage of computational technology, modeling, analytics, and data sciences. \n",
+        "\n",
+        "The DoD Digital Engineering Strategy outlines five elements necessary for the digital engineering ecosystem to thrive (also detailed in graphic): \n",
+        "\n",
+        "1. Formalize the development, integration, and use of models to inform enterprise and program decision making.\n",
+        "2. Provide an enduring, authoritative source of truth.\n",
+        "3. Incorporate technological innovation to improve the engineering practice.\n",
+        "4. Establish a supporting infrastructure and environment to perform activities, collaborate, and communicate across stakeholders.\n",
+        "5. Transform the culture and workforce to adopt and support digital engineering across the life cycle.\n",
+        "\n",
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/de-strategy.png\" width=\"300\" />"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "eK2fnYOh37Mg"
       },
       "source": [
-        "\n",
+        "## INCOSE SE Body of Knowldege\n",
         "*   The crux of digital engineering is the creation of ***computer readable*** models to represent all aspects of the system and to support all the activities for the design, development, manufacture, and operation of the system throughout its lifecycle.\n",
         "*   These computer models would have to be based on shared data ***schemata*** so that in effect a digital thread integrates all the diverse stakeholders involved in the acquisition of new weapon systems.\n",
         "*   Model-based systems engineering (MBSE) is a subset of digital engineering. MBSE supports the systems engineering activities of requirements, architecture, design, verification, and validation. These models would have to be connected to the physics-based models used by other engineering disciplines such as mechanical and electrical engineering.\n",
@@ -120,11 +139,35 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Cyber in Digital Engineering\n",
+        "Digital Engineering is seeing increased applications in the conception, design, integration, verification and validation (V&V) in mission critical systems. As a greater number of safety and security considerations are included in the design process, mission systems, network architecture design, and verification have become increasingly complex. The DoD Cyber Resilient Weapons Systems (CRWS) initiative encourages a mission level analysis of system culnerabilites and potoential adversary actions to evaluate mission resilience to cybersecurity effects. \n",
+        "\n",
+        "There are methods, practices, and tools that assess the quality of different requirements and design solutions based on safety and security risks in the presence of a determined cyberattack. The methods trade requirements and design decisions based on evaluation of hazard/risk, cost, and threat adversary properties. These methods also consider the dependencies between cybersecurity and system safety. \n",
+        "\n",
+        "In the context of digital engineering, finding the right appraoch to computationally support systems engineering and engineering activities of requirements, architecture, design, verification and validation for end-to-end solutions in the context of the mission is essential. \n",
+        "\n",
+        "The loss-driven systems engineering approach enables intentional design for a system. In the context of cyber, digital engineering enables cyber to be considered, tested, and evaluated from the project definition phase. The Concept of Operations (CONOPS) can elucidate the capabilities of the system and areas in which are essential for executing the mission. It applies to the entire system [McEvilley, MITRE, 2019].\n",
+        "\n",
+        "Through CONOPS, requirements and architecture, to detailed design, consideration of cyber through loss-scenarios helps eliminate redundant engineering efforts while ensuring a cohesive consideration of the critical points within the system. Highly effective soolutions can address multiple specialty areas, and also be attack-agnostic. The threat perspective ascertains the characteristic outcomes and consequences of the threats, not necessarily how they are executed. This warrants a system that is not simply built for known-knowns, but can also address unknowns. Digital engineering can expose parts of the acquisition process that will develop requirements for intentional design for continuous test and evaluation (developmental and operational). \n",
+        "\n",
+        "***Food for Thought....***\n",
+        "\n",
+        "* Please read the Project Definition document. \n",
+        "  * What are some immediate insights to achieve protection for concerns enabled, or induced, by, or within, the contested cyberspace?\n",
+        "  * What sort of awareness is necessary for the entire lifecycle from the current knowledge in document?\n",
+        "  * Is there a loss-scenario that can be immediately identified?\n",
+        "\n",
+        "* List projected cyber threat(s) for an Initial Capabilities Document. This would be before any formal threat assessment is made.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "-IX9IW3d6-4i"
       },
       "source": [
-        "<a name=\"resilience-concept\"></a>\n",
         "## Resilience Concept\n",
         "\n",
         "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/resilience-concept.png\" wdith=\"400\" />\n",
@@ -140,7 +183,27 @@
         "id": "sgK3uaD68pT0"
       },
       "source": [
-        "<a name=\"stpa-methodology\"></a>\n",
+        "## Systems-Theoretic Accdient Model and Processes (STAMP)\n",
+        "STAMP is a safety analysis method that is based on causation. Causation in STAMP is modeled through hierarchical control, which models each level of a system as a control process, where unsafe control actions can occur. This layered approach to safety has the advantage that unsafe control actions at each level percolate upwards or downwards in the hierarchy that in turn provides a notion of consequence within the safety model. STAMP works in contrast to linear failure modes, where unsafe actions form a chain of events. Instead, in STAMP safety violation emerge from the interacting control layers governing the system.\n",
+        "\n",
+        "Specifically, STAMP is a hazard analysis technique based on an extended model of accident causation. In addition to component failures, STAMP assumes that accidents can also be caused by unsafe interactions of system components, none of which may have individually failed. For this reason, STAMP further asserts that emergent properties, for example safety and security, cannot be assured by examining subsystems in isolation. STPA (System‐Theoretic Process Analysis) is one flavor of STAMP modeling that is primarily used to proactively identify hazardous conditions and states. STPA‐Sec is an extension on STPA with the intention of transitioning the benefits of loss‐oriented safety assessment to security [Leveson, 2009].\n",
+        "\n",
+        "The hierarchical control notion within STAMP is a congruent idea with a number of MBSE block diagrams, such as architectural or behavioral diagrams, because they can be augmented to model unsafe control actions in addition to the control system that define the behavior and architecture of the system. Furthermore, MBSE is based on the same hierarchical notion, namely, that systems can be modeled through different views that reside in different levels of abstraction. STAMP entities are, therefore, an important view of safety and security.\n",
+        "\n",
+        "***Food for Thought...***\n",
+        "\n",
+        "Reference the system architecture outlined in the course materials. \n",
+        "\n",
+        "1. Describe causal factors that can lead to an unsafe control and to hazards.\n",
+        "2. What is unsafe control action (UCA) that in a particular context and worst-case environment, will lead to a hazard? \n",
+        "3. List the previouos hazard, system state/set of conditions, that together with a set of worst-case environmental conditions, will lead to a loss. \n",
+        "4. Outline the loss and why it is of value to the stakeholders. Please also list the stakeholder to which the loss is most clostely impacting. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## STPA-Sec Methodology Overview\n",
         "> [Systems Theoretic Process Analysis (STPA) Guidebook](https://psas.scripts.mit.edu/home/get_file.php?name=STPA_handbook.pdf) (page 14)\n",
         "\n",
@@ -171,6 +234,7 @@
       "source": [
         "## Mission Aware (MA) MBSE Incredients\n",
         "\n",
+        "The Mission Aware framework provides a set of enablers to address critical challenges facing mission engineering in the DoD. Through the MA Meta‐Model, there is shared support by a collaborative infrastructure by amalgamizing and leveraging blue (mission), red (threat), and yellow (systems engineering) teams. The tools and methodologies are showing promise to address mission engineering challenges as an innovative and cross‐organizational approach. The MA MBSE Meta‐Model also supports the ability to view a system from requirements to functional and physical aspects, specifically, since the model includes notions of layering and a hierarchy that allows one to go beyond the architectural view to seeing how the processes and functions operate. The extended MA MBSE Meta‐Model also includes elements from the Cyber‐Security Requirement Methodology (CSRM), which organizes the vulnerabilities per the mission and environment objectives of the system utilizing the blue, red, and yellow teams.\n",
         "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mission-aware-mbse-incredients.png\" width=\"600\" />\n",
         "\n",
         "* [Essential MBSE](#essential-mbse)\n",
@@ -266,6 +330,37 @@
         "  * As necessary, the SE team updates the system description to include the red team recommendations.\n",
         "  * As necessary, the blue revises the operational risk assessment to account for the new system design and red team assessment.\n",
         "  * As necessary, the test team revises the verification and test plan to account for new system design and red team assessment."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Mission Engineering\n",
+        "The [DoD Mission Engineering Guide](https://ac.cto.mil/wp-content/uploads/2020/12/MEG-v40_20201130_shm.pdf) describes a process for reference architecture development and capability planning using a 6-step process. \n",
+        "\n",
+        "\n",
+        "1.   Problem/Need\n",
+        "2.   Mission Characterization\n",
+        "3.   Mission Metrics\n",
+        "4.   Design of Analysis\n",
+        "5.   Perform Efficacy Analysis \n",
+        "6.   Select Architecture. \n",
+        "\n",
+        "The desired output is a Government Reference Architecture (GRA) and a collection of data and models that can be reused in further systems engineering and design activities. The Mission Engineering Guide describes how mission definition includes derivation of Measures of Performance (MOP) that drive Key Performance Parameters (KPP) for included systems and subsystems.\n",
+        "\n",
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mission-engineering-measures.png\" width=\"400\" />\n",
+        "\n",
+        "\n",
+        "Resilience is a quality of the system architecture. The desired analysis outcomes of mission engineering are mission efficacy of potential solutions, sensitivity analyses, and increased confidence level in intended capabilities solutions. It is expressed in architectural patterns and missions and system requirements. ***Mission Aware*** provides the opportunity for standardization of processes to analyze and specify resilience requirements (including measures of performance).\n",
+        "\n",
+        "***Food for Thought....***\n",
+        "\n",
+        "Please review the Mission Engineering MOPs document in your course materials.\n",
+        "1. Highlight, as the System Engineering Team, the requirements, objectives, constraints, and stakeholder concnerns.\n",
+        "2. As a member of the Blue Team, what are some consequences and risks to the CSRM process in this scenario? \n",
+        "3. Referencing FOREST and loss-scenarios, what are the likelihood of different attacks given the current system design? What are some resilient solutions? \n",
+        "4. Write one requirement that is measurable and testable fo revaluation of the resilient modes of operation."
       ]
     },
     {
