--- a/content/02_SCRE_System_Description.ipynb
+++ b/content/02_SCRE_System_Description.ipynb
@@ -7,14 +7,13 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/03_SCRE_Risk_Assessment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/content/02_SCRE_System_Description.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ARKld3rWqosO",
-        "tags": []
+        "id": "apOh50Mu3aMi"
       },
       "source": [
         "# Initialize Notebook"
@@ -37,7 +36,12 @@
       },
       "outputs": [],
       "source": [
-        "%pip install -q manb\n",
+        "import sys\n",
+        "if sys.platform == 'emscripten':\n",
+        "    import piplite\n",
+        "    await piplite.install('manb')\n",
+        "else:\n",
+        "    %pip install -q manb\n",
         "import manb\n",
         "env = manb.Environment('https://genesys.mission-aware.net', '/api/v1/')"
       ]
@@ -84,128 +88,108 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "FZpIiP1ArEn5",
-        "tags": []
+        "id": "CfImYntD3aMk"
       },
       "source": [
-        "# Operational Risk Assessment\n"
+        "# System Description"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Initialize System Description"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "Jw_vlJ9z3aMk"
+      },
+      "outputs": [],
+      "source": [
+        "sd = manb.SystemDescription(env)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Use Case Diagrams"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "4d4dvNad3aMl"
+      },
+      "outputs": [],
+      "source": [
+        "sd.UseCaseDiagrams()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Use Case Table"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "-JG7UzPy3aMl"
+      },
+      "outputs": [],
+      "source": [
+        "sd.UseCaseTable()"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "MIcVtyIXAKQv"
+        "id": "kjrpgzOL3aMl"
       },
       "source": [
-        "## STPA Losses, Hazards, & Hazardous Control Actions\n",
+        "## Control Structure Diagram\n",
         "\n",
-        "--- \n",
-        "## MBSE ***Operational Risk Assessment*** Entities & Relationships\n",
+        "A ***hierarchical control structure*** is a system \n",
+        "model that is composed of feedback control loops. An effective \n",
+        "control structure will enforce constraints on the behavior of the \n",
+        "overall system.\n",
         "\n",
-        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mission-aware-ma-mbse-risk-assesment.png\" width=\"500\" />"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Initialize Risk Assessment"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "65_e7PT177VL"
-      },
-      "outputs": [],
-      "source": [
-        "ra = manb.RiskAssessment(env)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## System ***Losses***\n",
-        "Definition: A ***Loss*** involves something of value to stakeholders. \n",
-        "Losses may include a loss of human life or human injury, property damage, \n",
-        "environmental pollution, loss of mission, loss of reputation, loss or leak of \n",
-        "sensitive information, or any other loss that is unacceptable to the stakeholders.\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "CDPNSlmdc3Dl"
-      },
-      "outputs": [],
-      "source": [
-        "ra.LossTable()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## System Hazards\n",
-        "Definition: A ***Hazard*** is a system state or set of conditions \n",
-        "that, together with a particular set of worst-case environmental \n",
-        "conditions, will lead to a loss."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "of2stNiUzAN6"
-      },
-      "outputs": [],
-      "source": [
-        "ra.HazardTable()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## System Hazardous Control Actions\n",
-        "Definition: A ***Hazardous Control Action (HCA)*** is a control action that, \n",
-        "in a particular context and worst-case environment, will lead to a hazard.\n",
+        "----\n",
         "\n",
-        "There are four ways ***(variation type)*** a control action can be hazardous:\n",
-        "1. Not providing the control action leads to a hazard.\n",
-        "2. Providing the control action leads to a hazard.\n",
-        "3. Providing a potentially safe control action but too early, too late, or in the wrong order\n",
-        "4. The control action lasts too long or is stopped too soon (for continuous control actions, not discrete ones)."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "OkfZDaUr8zO2"
-      },
-      "outputs": [],
-      "source": [
-        "ra.HazardousActionTable()"
+        "### MBSE ***Control Structure*** Entities & Relationships\n",
+        "\n",
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mission-aware-mbse-control-structure.png\" width=\"500\" />\n",
+        "\n",
+        "\n",
+        "----\n",
+        "\n",
+        "| Entity | Description |\n",
+        "| :---   | :----       | \n",
+        "| Control Action | A controller provides control actions to control some process and to enforce constraints on the behavior of the <br> controlled process.|\n",
+        "| Component | A component is an abstract term that represents the physical or logical entity that performs a specific function <br> or functions.|\n",
+        "| Feedback | Process models may be updated in part by feedback used to observe the controlled process.|\n",
+        "| Function | A function is a transformation that accepts one or more inputs (items) and transforms them into outputs (items).|\n",
+        "| Item | An item represent flows within and between functions. An item is an input to or an output from a function.|\n",
+        "| Use Case | A use case identifies a piece of the functionality of a system in terms of how the users use the system to <br> achieve their goals (mission). Use cases are high-level descriptions of behavior under a specific set of conditions. <br>These high-level descriptions can then be elaborated to define the system behavior.|\n",
+        "\n",
+        "----"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Control Action Analysis\n",
-        "\n",
-        "Although all four variation types should be considered, they may not all \n",
-        "be applicable in every case (see HCA.0 and 'justification'). It is also possible \n",
-        "to identify several HCAs for a single variation type.\n",
-        "In general, each CA / variation type may define 0 or more HCAs."
+        "### System ***Context*** & ***Control Structure*** Diagram"
       ]
     },
     {
@@ -213,11 +197,49 @@
       "execution_count": null,
       "metadata": {
         "cellView": "form",
-        "id": "oiWTmcVwJk7Q"
+        "id": "rGvn7g_03aMm"
       },
       "outputs": [],
       "source": [
-        "ra.ControlActionAnalysisTable()"
+        "sd.ControlStructureDiagram()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### System ***Control Actions***"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "MKYtNVTJ77VL"
+      },
+      "outputs": [],
+      "source": [
+        "sd.ControlActionTable()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Message Sequence Diagrams"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "hhh5GYCv3aMm"
+      },
+      "outputs": [],
+      "source": [
+        "sd.MSCDiagrams()"
       ]
     }
   ],
@@ -225,13 +247,15 @@
     "colab": {
       "collapsed_sections": [],
       "include_colab_link": true,
-      "name": "03_SCRE_Risk_Assessment.ipynb",
-      "private_outputs": true,
+      "name": "02_SCRE_System_Description.ipynb",
       "provenance": [],
       "toc_visible": true
     },
+    "interpreter": {
+      "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "Python 3.8.10 64-bit",
       "language": "python",
       "name": "python3"
     },
@@ -247,7 +271,7 @@
       "pygments_lexer": "ipython3",
       "version": "3.8.10"
     },
-    "toc-showtags": false
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
