--- a/content/05_SCRE_Resilience_Architecture.ipynb
+++ b/content/05_SCRE_Resilience_Architecture.ipynb
@@ -7,7 +7,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/05_SCRE_Resilience_Architecture.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/content/05_SCRE_Resilience_Architecture.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -37,7 +37,12 @@
       },
       "outputs": [],
       "source": [
-        "%pip install -q manb\n",
+        "import sys\n",
+        "if sys.platform == 'emscripten':\n",
+        "    import piplite\n",
+        "    await piplite.install('manb')\n",
+        "else:\n",
+        "    %pip install -q manb\n",
         "import manb\n",
         "env = manb.Environment('https://genesys.mission-aware.net', '/api/v1/')"
       ]
