--- a/content/02_SCRE_System_Description.ipynb
+++ b/content/02_SCRE_System_Description.ipynb
@@ -27,6 +27,31 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Google Colab"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%pip install -q manb\n",
+        "import manb\n",
+        "env = manb.Environment('https://genesys.mission-aware.net', '/api/v1/')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### JupyterLite"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -36,12 +61,8 @@
       },
       "outputs": [],
       "source": [
-        "import sys\n",
-        "if sys.platform == 'emscripten':\n",
-        "    import piplite\n",
-        "    await piplite.install('manb')\n",
-        "else:\n",
-        "    %pip install -q manb\n",
+        "import piplite\n",
+        "await piplite.install('manb')\n",
         "import manb\n",
         "env = manb.Environment('https://genesys.mission-aware.net', '/api/v1/')"
       ]
